--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Saiteja's web</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body >
   <table>
     <tr>
       <td>
